objects/TW1_Cartoes_Estacionamento__c.object
<CustomObject>
    
    
    <fields>
        <fullName>TW1_Cartao_Gerado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cartão Gerado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Fim__c</fullName>
        <label>Data Fim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_inicio__c</fullName>
        <label>Data início</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Externo__c</fullName>
        <externalId>true</externalId>
        <label>ID Externo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Marca__c</fullName>
        <label>Marca</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Modelo__c</fullName>
        <label>Modelo</label>
        <length>20</length>
        <type>Text</type>
    </fields>

    <fields>
        <fullName>TW1_Numero__c</fullName>
        <label>Número</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>TW1_Numero_do_Cartao__c</fullName>
        <label>Número do Cartão</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Placa__c</fullName>
        <label>Placa</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ativo</fullName>
                </value>
                <value>
                    <fullName>Inativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cartão Estacionamento</label>
    <nameField>
        <label>Número do cartão</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cartões Estacionamento</pluralLabel>
    
</CustomObject>